# py-htminify

./: .gitignore  LICENSE  README.rst  htminify.py  middleware.py  pyproject.toml  tox.ini
.github/workflows/: main.yml
docs/: conf.py  index.rst
docs/source/: htminify.rst  modules.rst
htminify/: __init__.py  dj.py  fl.py  htminify.py  wsgi.py  wsgi_app.py
tests/: django_mock.py  helpers.py  test_django_middleware.py  test_htminify.py  test_wsgi_middleware.py
